# vec.std

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  readme.md
sourcepawn/: vec.stdlib.sp
sourcepawn/include/: vec.std.inc
sourcepawn/include/vec.std/: const.inc  engine.inc  fileparser.inc  hashlib.inc  hint.inc  math.inc  mem.inc  paramparser.inc  playermgr.inc  sha.inc  text.inc  tools.inc  utils.inc  winpanel.inc
sourcepawn/vec.stdlib/: winpanel.sp
src/: CMakeLists.txt  client.cpp  client.h  command.cpp  command.h  events.cpp  events.h  extension.cpp  extension.h  functions.cpp  functions.h  smsdk_config.h
src/public/: CMakeLists.txt  const.h  engine.cpp  engine.h  fileparser.cpp  fileparser.h  hashlib.cpp  hashlib.h  paramparser.cpp  paramparser.h  playermgr.cpp  playermgr.h  text.cpp  text.h  tools.cpp  tools.h  utils.cpp  utils.h  vmathlib.cpp  vmathlib.h
src/public/hashlib/: CMakeLists.txt  base64.cpp  base64.h  crc32.cpp  crc32.h  md5.cpp  md5.h  sha1.h  sha256.h
src/public/tools/: glowshell.cpp  glowshell.h
